feat: swap endpoint added to TeamApi
