# src/main/kotlin/com/posadeus/fantatennis/controller/TeamApi.kt
@@ -1,5 +1,5 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.10.0).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.12.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
 */
@@ -15,7 +15,7 @@ interface TeamApi {
 
     @RequestMapping(
             method = [RequestMethod.POST],
-            value = ["/team/{teamId}/players"],
+            value = ["/team/{teamId}/players/add"],
             produces = ["application/json"],
             consumes = ["application/json"]
     )
@@ -37,4 +37,13 @@ interface TeamApi {
             produces = ["application/json"]
     )
     fun retrieve( @PathVariable("teamId") teamId: Int): ResponseEntity<TeamDto>
+
+
+    @RequestMapping(
+            method = [RequestMethod.POST],
+            value = ["/team/{teamId}/players/swap"],
+            produces = ["application/json"],
+            consumes = ["application/json"]
+    )
+    fun swamp( @PathVariable("teamId") teamId: Int, @RequestBody playersToSwapDto: PlayersToSwapDto): ResponseEntity<TeamDto>
 }
